# house-price-estimator

./: README.md  pyproject.toml  requirements.txt
frontend/: app.py
model/: house_prices_model.pickle  hpp.ipynb
server/: main.py  util.py
server/artifacts/: column.json  house_prices_model.pickle
